[workspace]
members = ["./crates/*"]
default-members = ["./crates/tlb"]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2021"
repository = "https://github.com/mitinarseny/tlb"
keywords = ["ton", "tl-b", "boc"]
categories = ["encoding"]
license-file = "LICENSE.txt"

[workspace.dependencies]
tlb = { path = "./crates/tlb", version = "0.2.1" }
tlbits = { path = "./crates/bits", version = "0.2.1" }
tlb-ton = { path = "./crates/ton", version = "0.2.1" }

base64 = "0.21"
bitvec = "1"
either = "1"
hex = "0.4"
impl-tools = "0.10"
itertools = "0.12"
num-bigint = "0.4"
sha2 = "0.10"
strum = { version = "0.25", features = ["derive"] }
thiserror = "1"