[workspace]
members = ["./crates/*"]
default-members = ["./crates/toner"]
resolver = "2"

[workspace.package]
edition = "2021"
repository = "https://github.com/mitinarseny/toner"
keywords = ["ton", "tl-b", "boc"]
categories = ["encoding"]
license-file = "LICENSE.txt"

[workspace.dependencies]
tlb = { path = "./crates/tlb", version = "0.2.13" }
tlbits = { path = "./crates/bits", version = "0.2.11" }
tlb-ton = { path = "./crates/tlb-ton", version = "0.2.13" }
ton-contracts = { path = "./crates/contracts", version = "0.2.13" }
toner = { path = "./crates/toner", version = "0.2.11" }

anyhow = "1"
base64 = "0.21"
bitvec = "1"
chrono = { version = "0.4", default-features = false }
either = "1"
hex = "0.4"
hex-literal = "0.4"
impl-tools = "0.10"
itertools = "0.12"
lazy_static = "1.4"
num-bigint = "0.4"
num-traits = "0.2"
serde_with = { version = "3.8", features = ["macros"] }
sha2 = "0.10"
strum = { version = "0.25", features = ["derive"] }
thiserror = "1"
