[workspace]
members = ["./crates/*"]
default-members = ["./crates/toner"]
resolver = "3"

[workspace.package]
rust-version = "1.85"
edition = "2024"
repository = "https://github.com/mitinarseny/toner"
keywords = ["ton", "tlb", "tl-b", "boc"]
categories = ["encoding"]
license-file = "LICENSE.txt"

[workspace.dependencies]
tlbits = { path = "./crates/bits", version = "0.6.0" }
tlb = { path = "./crates/tlb", version = "0.6.0" }
tlb-ton = { path = "./crates/tlb-ton", version = "0.6.0" }
ton-contracts = { path = "./crates/contracts", version = "0.6.0" }
toner = { path = "./crates/toner", version = "0.6.0" }

anyhow = "1"
arbitrary = "1.4"
array-util = "1"
base64 = "0.21"
bitvec = "1"
chrono = { version = "0.4", default-features = false }
crc = "3"
digest = { version = "0.10", default-features = false }
either = "1"
hex = "0.4"
hex-literal = "0.4"
impl-tools = "0.11"
itertools = "0.12"
lazy_static = "1.4"
num-bigint = "0.4"
num-traits = "0.2"
rstest = "0.26"
rustversion = "1"
schemars_0_8 = { package = "schemars", version = "0.8", default-features = false }
schemars_1 = { package = "schemars", version = "1", default-features = false }
serde_with = { version = "3.8", features = ["macros"] }
sha2 = "0.10"
strum = { version = "0.25", features = ["derive"] }
thiserror = "1"
