[package]
name = "tlbits"
version = "0.5.0"
edition.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true
description = "TL-B serialization (bits only)"

[dependencies]
bitvec.workspace = true
either.workspace = true
impl-tools.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
thiserror.workspace = true
