[package]
name = "tlbits"
version = "0.6.3"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true
description = "TL-B serialization (bits only)"

[dependencies]
array-util.workspace = true
bitvec.workspace = true
either.workspace = true
impl-tools.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
rustversion.workspace = true
thiserror.workspace = true

[dev-dependencies]
rstest.workspace = true
