[package]
name = "ton-contracts"
version = "0.2.22"
edition.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Bindings for common smart-contracts on TON blockchain"

[dependencies]
tlb.workspace = true
tlb-ton.workspace = true

anyhow.workspace = true
bitvec.workspace = true
chrono.workspace = true
lazy_static.workspace = true
num-bigint.workspace = true

hmac = { version = "0.12", optional = true }
nacl = { version = "0.5", optional = true }
pbkdf2 = { version = "0.12", features = ["simple"], optional = true }
sha2 = { version = "0.10", optional = true }


[features]
default = ["wallet", "jetton"]
wallet = ["dep:nacl", "dep:hmac", "dep:sha2", "dep:pbkdf2"]
jetton = []

[dev-dependencies]
hex-literal.workspace = true
