[package]
name = "tlb-ton"
version = "0.4.2"
edition.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Common TL-B types for TON blockchain"

[dependencies]
tlb.workspace = true

base64.workspace = true
chrono.workspace = true
crc.workspace = true
hex.workspace = true
impl-tools.workspace = true
lazy_static.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
serde_with = { workspace = true, optional = true }
strum.workspace = true

[features]
serde = ["dep:serde_with"]
base64 = ["tlb/base64"]

[dev-dependencies]
serde_json = "1"
