[package]
name = "tlb-ton"
version = "0.4.6"
edition.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Common TL-B types for TON blockchain"

[dependencies]
tlb.workspace = true

arbitrary = { workspace = true, features = ["derive"], optional = true }
base64.workspace = true
chrono.workspace = true
crc.workspace = true
digest.workspace = true
hex.workspace = true
impl-tools.workspace = true
lazy_static.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
serde_with = { workspace = true, optional = true }
strum.workspace = true
sha2 = { workspace = true, optional = true }

[features]
default = ["sha2"]

arbitrary = [
    "dep:arbitrary",
    "chrono/arbitrary",
    "chrono/std",
    "num-bigint/arbitrary",
    "tlb/arbitrary",
]
base64 = ["tlb/base64"]
serde = ["dep:serde_with"]
sha2 = ["dep:sha2", "tlb/sha2"]

[dev-dependencies]
serde_json = "1"
