[package]
name = "tlb"
version = "0.3.1"
edition.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true
description = "TL-B serialization"

[dependencies]
tlbits.workspace = true

bitvec.workspace = true
hex.workspace = true
impl-tools.workspace = true
sha2.workspace = true

[dev-dependencies]
hex-literal.workspace = true
num-bigint.workspace = true
