[package]
name = "tlb"
version = "0.4.3"
edition.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true
description = "TL-B serialization"

[dependencies]
tlbits.workspace = true

arbitrary = { workspace = true, features = ["derive"], optional = true }
base64 = { workspace = true, optional = true }
bitvec.workspace = true
crc.workspace = true
hex.workspace = true
impl-tools.workspace = true
sha2.workspace = true

[features]
arbitrary = ["dep:arbitrary"]
base64 = ["dep:base64"]

[dev-dependencies]
hex-literal.workspace = true
num-bigint.workspace = true
