[package]
name = "tlb"
version = "0.7.2"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true
description = "TL-B serialization"

[dependencies]
tlbits.workspace = true

arbitrary = { workspace = true, features = ["derive"], optional = true }
array-util.workspace = true
base64 = { workspace = true, optional = true }
bitvec.workspace = true
crc.workspace = true
digest.workspace = true
hex.workspace = true
impl-tools.workspace = true
sha2 = { workspace = true, optional = true }

[features]
default = ["sha2"]

arbitrary = ["dep:arbitrary"]
base64 = ["dep:base64"]
sha2 = ["dep:sha2"]

[dev-dependencies]
hex-literal.workspace = true
num-bigint.workspace = true
