[package]
name = "tlb-ton"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true
description = "TL-B types for TON blockchain"

[dependencies]
tlb.workspace = true
tlbits.workspace = true

crc = "3"
base64.workspace = true
hex.workspace = true
strum.workspace = true

tonlib = { workspace = true, optional = true }

[features]
default = ["tonlib"]
tonlib = ["dep:tonlib", "tlb/tonlib"]
