[package]
name = "tlb-ton"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true
description = "TL-B types for TON blockchain"

[dependencies]
tlb.workspace = true
tlbits.workspace = true

base64.workspace = true
bitvec.workspace = true
crc = "3"
either.workspace = true
hex.workspace = true
num-bigint.workspace = true
serde_with = { workspace = true, optional = true }
strum.workspace = true

[dev-dependencies]
serde_json = "1"

[features]
serde = ["dep:serde_with"]
