[package]
name = "toner"
version = "0.4.3"
edition.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true
description = "SDK for TON blockchain"
readme = "../../README.md"

[dependencies]
tlb.workspace = true
tlb-ton.workspace = true
ton-contracts.workspace = true
